refator: added protected / public routes and installed react icons

--- a/client/src/pages/MyBooking.css
+++ b/client/src/pages/MyBooking.css
@@ -6,13 +6,12 @@
   /* background:pink; */
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Header */
 header {
   text-align: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 header h1 {
