--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -1,4 +1,4 @@
-/* .login-container {
+.login-container {
   max-width: 400px;
   margin: auto;
 }
@@ -23,4 +23,4 @@
   border-radius: 5px;
   padding: 10px;
   font-size: 14px;
-} */
+}
